--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
     name: docling-api
-    env: python
-    buildCommand: ./build.sh
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    env: docker
+    autoDeploy: true
+    dockerfilePath: ./Dockerfile
